改进邀请码生成：使用安全的随机字符串，防止被猜测侵占

--- a/会员系统配置说明.md
+++ b/会员系统配置说明.md
@@ -24,17 +24,42 @@
 
 ### 2. 创建新邀请码
 
-可以通过 Python 脚本创建新邀请码：
+**⚠️ 重要：为了安全，建议使用随机生成的邀请码，避免使用简单易猜的邀请码！**
+
+#### 方式一：生成随机邀请码（推荐）
+
+使用脚本自动生成安全的随机邀请码：
+
+```bash
+# 生成10个16位随机邀请码，每个使用1次
+python create_invite_code.py generate 10 1 16
+
+# 生成5个20位随机邀请码，每个使用10次
+python create_invite_code.py generate 5 10 20
+```
+
+**随机邀请码特点**：
+- ✅ 使用安全的随机生成器（`secrets` 模块）
+- ✅ 包含大小写字母和数字
+- ✅ 排除容易混淆的字符（0/O, 1/I/l）
+- ✅ 默认16位长度，可自定义
+- ✅ 自动检查重复，确保唯一性
+
+#### 方式二：创建指定邀请码
+
+如果需要创建特定格式的邀请码：
 
 ```python
 from user_auth import create_invite_code
 
 # 创建单个使用邀请码
-create_invite_code('NEWCODE2024', max_uses=1)
+create_invite_code('CUSTOM2024', max_uses=1)
 
 # 创建可多次使用的邀请码
 create_invite_code('MULTI2024', max_uses=10)
 ```
+
+**⚠️ 注意**：不推荐使用简单易猜的邀请码（如 `INVITE001`、`CODE123` 等），容易被恶意用户猜测和侵占。
 
 ### 3. 查看邀请码列表
 
