清理长邀请码，只保留6位随机邀请码

--- a/会员系统配置说明.md
+++ b/会员系统配置说明.md
@@ -31,18 +31,21 @@
 使用脚本自动生成安全的随机邀请码：
 
 ```bash
-# 生成10个16位随机邀请码，每个使用1次
-python create_invite_code.py generate 10 1 16
+# 生成10个6位随机邀请码，每个使用1次（默认6位）
+python create_invite_code.py generate 10 1
 
-# 生成5个20位随机邀请码，每个使用10次
-python create_invite_code.py generate 5 10 20
+# 生成5个6位随机邀请码，每个使用10次
+python create_invite_code.py generate 5 10
+
+# 生成8位随机邀请码（可自定义长度）
+python create_invite_code.py generate 10 1 8
 ```
 
 **随机邀请码特点**：
 - ✅ 使用安全的随机生成器（`secrets` 模块）
 - ✅ 包含大小写字母和数字
 - ✅ 排除容易混淆的字符（0/O, 1/I/l）
-- ✅ 默认16位长度，可自定义
+- ✅ 默认6位长度（英文字母+数字），可自定义
 - ✅ 自动检查重复，确保唯一性
 
 #### 方式二：创建指定邀请码
